fix spacing below embeddable video

--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -134,6 +134,16 @@
     width: 100%; 
     height: 100%;
   }
+
+  & + h1 {
+    margin-top: emRhythm(1);
+  }
+  & + h2 {
+    margin-top: emRhythm(3);
+  }
+  & + h3, & + h4, & + h5 {
+    margin-top: emRhythm(5);
+  }
 }
 
 // // Smartphones (portrait and landscape)
